@@ -1,3 +1,8 @@
+2005-10-09  Tom Tromey  <tromey@redhat.com>
+
+	* tree.cc (visit_field_ref): Removed 'const'.
+	(visit_method_invocation): Likewise.
+
 2005-10-08  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* tree.hh (tree_generator): Adjustments for changes in the
